--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,8 @@ src/KeyFrameDatabase.cc
 src/Sim3Solver.cc
 src/Initializer.cc
 src/Viewer.cc
+src/Triangle.cpp
+src/TrianglePlanes.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
